# mcp-transport-scratch

./: .gitignore  README.md  pyproject.toml
src/client/: mcp_client.py  ws_client.py
src/server/: main.py  mcp_definition.py  ws_server.py
src/transport/http/: client.py  server.py
src/transport/ws/: client.py  server.py
