[project]
name = "mcp-ws"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.8.0",
    "fastapi>=0.115.11",
    "mcp>=1.3.0",
    "uvicorn>=0.34.0",
    "websockets>=15.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src"]

[dependency-groups]
dev = [
    "hatchling>=1.27.0",
]
